<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyShare</string>
    <string name="action_settings">Settings</string>
    <string name="remote_devices_lbl">Remote devices:</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_choose_file">Choose File</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="service_status">Service status</string>
    <string name="destination_folder">Download Folder</string>
    <string name="external_folder">External Disk</string>
    <string name="internal_folder">Application Folder</string>
    <string name="username_hint">username</string>
    <string name="submit_btn">MySave</string>
    <string name="user_lbl">User :</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="saved">Usename changed</string>
    <string name="default_username">Android</string>
    <string name="service_status_key">easyshare.androidui.SERVICE_STATUS</string>
    <string name="username_key">easyshare.androidui.USERNAME</string>
    <string name="path_key">easyshare.androidui.PATH</string>
    <string name="user_properties">easyshare.androidui.USER_PROPERTIES</string>
    <string name="download_folder">Download</string>
    <string name="path_lbv">Path</string>

</resources>
